--- a/app/views/spree/checkout/_order_summary.html.slim
+++ b/app/views/spree/checkout/_order_summary.html.slim
@@ -22,38 +22,36 @@ ruby:
   ul.cart-items
     - (cart.products || []).each do |product|
       li.cart-item data-id=(product.line_item_id)
-        .clearfix
-          = link_to product.name, collection_product_path(product), class: 'cart-item-title'
-          a.remove-product.fa.fa-close.pull-right.link-grey href="#0"
+        a.remove-product.fa.fa-close.pull-right.link-grey href="#0"
         .cart-item-image-holder.pull-left
           = link_to collection_product_path(product) do
             = image_tag product.image.large, class: 'cart-item-image'
         .cart-item-info
           .heading
             span.qty 
-              ' Qty:
               =' "#{product.quantity}"
-            span 
-              ' /
-            span 
-              ' Size: #{ product.size.presentation }
-            span 
-              ' /
-            span 
-              ' Color:
-              span.color style="background-color: #{ product.color.value}; border: 1px solid gray;"
+            = link_to product.name, collection_product_path(product), class: 'cart-item-title'
+          .clearfix
+            .pull-left.small
+              ' Size: 
+                span
+                  ' #{ product.size.presentation },
+              ' Color: 
+                span.color
+                  ' #{ product.color.name}
+            .pull-right.text-muted = product.price.display_price
           .cart-prices
-            div = product.price.display_price
+            
             - if product.making_options.present?
               - product.making_options.each do |option|
                 .small 
-                  = "+ #{ option.display_price.to_s } #{ option.name }"
-                  = link_to '', '#', class: 'fa fa-close making-option-remove', data: { id: option.id }
+                  = "#{ option.name } + #{ option.display_price.to_s }"
+                  / = link_to '', '#', class: 'fa fa-close making-option-remove', data: { id: option.id }
             - if product.customizations.present?
               - product.customizations.each do |customization|
-                .small 
-                  = "+ #{ customization.display_price.to_s } #{ customization.name }"
-                  = link_to '', '#', class: 'fa fa-close customization-remove'
+                .small.text-pink
+                  = "#{ customization.name } + #{ customization.display_price.to_s }"
+                  / = link_to '', '#', class: 'fa fa-close customization-remove'
             /.total 
               ' = $999.99
 
