--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -170,13 +170,27 @@
   });
 
   var PARAMS = [
-    { label: "promocode",  param: "pc",  required: true,  encoded: true,  type: 'string' },
-    { label: "heading",    param: "h",   required: false, encoded: true,  type: 'string' },
-    { label: "message",    param: "m",   required: false, encoded: true,  type: 'string' },
-    { label: "timeout",    param: "t",   required: false, encoded: false, type: 'integer', defaultValue: 2 },
-    { label: "class_name", param: "s",   required: false, encoded: true,  type: 'string' },
-    { label: "pop",        param: "pop", required: true,  encoded: false, type: 'boolean', defaultValue: 'true'},
-    { label: "raw",        param: "raw", required: false, encoded: false, type: 'boolean'}
+    {
+      label: "promocode",  param: "pc",  required: true,  encoded: true,  type: 'string',
+      defaultValue: '<%= decode(params[:pc]).html_safe %>'
+    }, {
+      label: "heading",    param: "h",   required: false, encoded: true,  type: 'string',
+      defaultValue: '<%= decode(params[:h]).html_safe %>'
+    }, {
+      label: "message",    param: "m",   required: false, encoded: true,  type: 'string',
+      defaultValue: '<%= decode(params[:m]).html_safe %>'
+    }, {
+      label: "timeout",    param: "t",   required: false, encoded: false, type: 'integer',
+      defaultValue: 2
+    }, {
+      label: "class_name", param: "s",   required: false, encoded: true,  type: 'string',
+      defaultValue: '<%= decode(params[:s]).html_safe %>'
+    }, {
+      label: "pop",        param: "pop", required: true,  encoded: false, type: 'boolean',
+      defaultValue: 'true'
+    }, {
+      label: "raw",        param: "raw", required: false, encoded: false, type: 'boolean'
+    }
   ];
 
   var knownPromoCodes = <%= promo_codes.to_json.html_safe %>;
