[copy] Update fame chain

--- a/app/views/fame_chains/new.html.slim
+++ b/app/views/fame_chains/new.html.slim
@@ -35,44 +35,49 @@
 
   .col-md-4.brand-pink.benefits
     .row
-      h4.text-center who can apply:
+      h4.text-center A Fame Chain blogger has:
       ul
-        li Have a blog where you actively follow fashion trends.
-        li Have a style of fashion Vlog.
-        li Want to earn an income from your blog.
-        li Want to inspire girls to create their own unique look for their formal occasions.
-        li Are active on either: Instagram, Facebook, Twitter, Pinterest, YouTube and/or other social media.
+        li A stylish blog that actively follows fashion trends.
+        li A strong digital presence in the blogger community.
+        li Active social media engagement (Instagram, Twitter, Pinterest, YouTube and/or other social channels)
+        li A passion to inspire girls to explore and cultivate their own unique style –the desire to blossom into a true #FameBabe!
+
       = image_tag "_famechain/glam-rebel.jpg", alt: 'Prom Queen collection', class: 'img-responsive '
 
   .col-md-4.benefits.middle
     .row
       h4.text-center what you get
       ul
-        li opportunity to be invited to co-design a formal dress.
-        li 15% comission on every dress that one of your followers buys from our store
-        li
-          |Opportunity to link to other blogs and&nbsp;
-          span increase your own blogs visibility
-        li
-          span a free&nbsp;
-          | dress gifted to you to style for each blogger with over 20k following.
-        li Public endorsement of your blog as part of The Fame Chain.
-        li Oppotunity to feature through our own social media channel and gain exposure.
-        li VIP access to special discounts for you and your followers.
-        li Access to a network of like-minded young women and content.
-        li
-          span jumpstart&nbsp;
-          | in your blogging, fashion and/or technology carer.
-        li VIP access to our annual paid internship competition.
+        li Membership in a community of high-tier influential bloggers in the fashion industry.
+        li Public endorsement of your blog as part of the Fame Chain which will INCREASE YOUR OWN BLOG'S VISIBILITY.
+        li The opportunity to co-design a formal dress with Fame & Partners.
+        li 15% commission on every click-through sale that your blog generates.
+        li A FREE dress gifted to any member with over 20K following to creatively style for their blog.
+        li The opportunity to feature on Fame & Partners social channels and gain exposure to industry professionals across Design, Marketing and Technology.
+        li VIP access to special blogger discount codes for your readership.
+        li Notification of exclusive blogger sales and promotions.
+        li The opportunity to be involved in a FREE blogger shoot with our styling team and in-house photographer.
+        li The Fame Chain Blogger Badge for your webpage.
+        li Access to Ad Banner sets to generate sales.
+        li If you have a LinkShare account you can connect with us to receive all time access to banners/link ads, automatic reimbursement for all sales generated through your blog/vlog.
+        li A complimentary one-on-one training session on utilising Affiliate networking for maximum click-through rate.
+        li A complimentary one-on-one training session on optimising your blog's SEO.
 
   .col-md-4.brand-pink.benefits
     .row
       h4.text-center how does it work?
       ul.last-column
-        li Apply to join The Fame Chain
-        li Applications are assessed within 5 days.
-        li If you are accepted, you get all the above perks.
-        li Receive the Fame Chain Welcome kit with technical instructions on how to join.
+        li Apply to join The Fame Chain.
+        li Applications are assessed within 5 business days.
+        li
+          ' If you are accepted, you will receive
+          strong> The Fame Chain Welcome Kit
+          ' with technical instructions on how to complete your membership from our Fame Chain Coordinator.
+        li
+          ' The transformation to the ultimate
+          strong> #FameBabe
+          ' begins!
+
       = image_tag "_famechain/glam-rebel5.jpg", alt: 'Something here', class: 'img-responsive portrait-img'
 
   .form
