[fix] Add some handy output for collection debugging

--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -1,3 +1,6 @@
+#collection-resource.hidden
+  =@resource_args.inspect
+  
 ruby:
   init_collection_filter = "
     filter = new ProductCollectionFilter({
