[feat][admin] show make state in bulk updates table

--- a/app/views/admin/bulk_order_updates/show.html.slim
+++ b/app/views/admin/bulk_order_updates/show.html.slim
@@ -35,7 +35,7 @@ table
 table
   thead
     tr
-      th colspan=10 CSV
+      th colspan=12 CSV
       th Matching
       th colspan=6 Spree
       th colspan=10 Update Process
@@ -48,6 +48,7 @@ table
       th size
       th quantity
       th colour
+      th make_state
       th tracking_number
       th dispatch_date
       /th delivery_method
@@ -75,6 +76,7 @@ table
       td = liu.size
       td = liu.quantity
       td = liu.colour
+      td = liu.make_state
       td = liu.tracking_number
       td = liu.dispatch_date
       /td = liu.delivery_method
