--- a/app/views/admin/bulk_order_updates/show.html.slim
+++ b/app/views/admin/bulk_order_updates/show.html.slim
@@ -26,16 +26,20 @@ table
         = f.button '1. Match Up with Spree'
     td
       = form_for bulk_update do |f|
+        = f.hidden_field :update_make_states, value: 'true'
+        = f.button '2. Update Make States'
+    td
+      = form_for bulk_update do |f|
         = f.hidden_field :setup_shipments, value: 'true'
-        = f.button '2. Setup Shipments'
+        = f.button '3. Setup Shipments'
     td
       = form_for bulk_update do |f|
         = f.hidden_field :mark_valid_shipped, value: 'true'
-        = f.button '3. Ship Now!', confirm: 'Cannot be undone! Are you sure?'
+        = f.button '4. Ship Now!', confirm: 'Cannot be undone! Are you sure?'
 table
   thead
     tr
-      th colspan=12 CSV
+      th colspan=11 CSV
       th Matching
       th colspan=6 Spree
       th colspan=10 Update Process
