--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -20,11 +20,7 @@
     render: function() {
 
       var utf8_to_b64 = function utf8_to_b64( str ) {
-        result = window.btoa(unescape(encodeURIComponent( str )))
-        result = result.replace(/\+/g, '%2B')
-        result = result.replace(/\=/g, '%3D')
-        result = result.replace(/\//g, '%5C')
-        return result
+        return encodeURIComponent( window.btoa(unescape(encodeURIComponent( str ))))
       };
 
       var knownValues = this.props.keys;
