--- a/app/assets/stylesheets/admin/update_states.css.scss
+++ b/app/assets/stylesheets/admin/update_states.css.scss
@@ -7,6 +7,22 @@ tr:hover {
   }
 }
 
+// Bootstrap style lozenge
+span.bulk_update {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  background-color: #777;
+  border-radius: 10px;
+}
+
 // Bootstrap style colours
 .bulk_update.invalid  { background-color: #d9534f; }
 .bulk_update.fail     { background-color: #f0ad4e; }
