--- a/app/views/admin/bulk_order_updates/index.html.slim
+++ b/app/views/admin/bulk_order_updates/index.html.slim
@@ -24,8 +24,9 @@ table
         - Admin::LineItemUpdate::PROCESS_STATES.each do |state_name|
           - total_for_state = bulk.item_states[state_name.to_s]
           - cssClass = total_for_state > 0 ? "bulk_update #{state_name}" : ''
-          td class=cssClass
-            = total_for_state
+          td
+            span class=cssClass
+              = total_for_state
         td
           => link_to('View', bulk)
         td
