[copy] Minor copy edits

--- a/app/views/fame_chains/new.html.slim
+++ b/app/views/fame_chains/new.html.slim
@@ -40,7 +40,10 @@
         li A stylish blog that actively follows fashion trends.
         li A strong digital presence in the blogger community.
         li Active social media engagement (Instagram, Twitter, Pinterest, YouTube and/or other social channels)
-        li A passion to inspire girls to explore and cultivate their own unique style –the desire to blossom into a true #FameBabe!
+        li
+          ' A passion to inspire girls to explore and cultivate their own unique style –the desire to blossom into a true
+          strong> #FameBabe
+          |!
 
       = image_tag "_famechain/glam-rebel.jpg", alt: 'Prom Queen collection', class: 'img-responsive '
 
@@ -49,14 +52,23 @@
       h4.text-center what you get
       ul
         li Membership in a community of high-tier influential bloggers in the fashion industry.
-        li Public endorsement of your blog as part of the Fame Chain which will INCREASE YOUR OWN BLOG'S VISIBILITY.
+        li
+          ' Public endorsement of your blog as part of the Fame Chain which will
+          strong> increase your own blog's visibility
+          |.
         li The opportunity to co-design a formal dress with Fame & Partners.
         li 15% commission on every click-through sale that your blog generates.
-        li A FREE dress gifted to any member with over 20K following to creatively style for their blog.
+        li
+          ' A
+          strong> FREE
+          ' dress gifted to any member with over 20K following to creatively style for their blog.
         li The opportunity to feature on Fame & Partners social channels and gain exposure to industry professionals across Design, Marketing and Technology.
         li VIP access to special blogger discount codes for your readership.
         li Notification of exclusive blogger sales and promotions.
-        li The opportunity to be involved in a FREE blogger shoot with our styling team and in-house photographer.
+        li
+          ' The opportunity to be involved in a
+          strong> FREE
+          ' blogger shoot with our styling team and in-house photographer.
         li The Fame Chain Blogger Badge for your webpage.
         li Access to Ad Banner sets to generate sales.
         li If you have a LinkShare account you can connect with us to receive all time access to banners/link ads, automatic reimbursement for all sales generated through your blog/vlog.
