[feat][style quiz] extracted static quiz items to separate engine

--- a/style_quiz/app/views/layouts/style_quiz/application.html.slim
+++ b/style_quiz/app/views/layouts/style_quiz/application.html.slim
@@ -2,10 +2,10 @@ doctype html
 = conditional_html do
   head
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Forum'
-    = stylesheet_link_tag 'application_quiz'
+    = stylesheet_link_tag 'style_quiz/application'
     = csrf_meta_tags
     
-    = javascript_include_tag 'application_quiz'
+    = javascript_include_tag 'style_quiz/application'
     script src="//use.typekit.net/kur6crm.js" type="text/javascript"
     script type="text/javascript"
       | try{Typekit.load();}catch(e){}
