--- a/app/views/spree/orders/show.html.slim
+++ b/app/views/spree/orders/show.html.slim
@@ -79,11 +79,6 @@ ruby:
           - unless current_spree_user.blank?
             p
               button.btn.back-to-orders = link_to 'Your orders', user_orders_path, class: 'btn', remote: true
-
-          - if successfully_ordered
-            .hide
-              = render 'shared/sales_conversion_pixels', locals: {order: @order}
-
         .row
           p Share your purchase with your friends so no one buys the same dress for your event!
           .social.addthis_toolbox.addthis_default_style *addthis_config
@@ -92,3 +87,6 @@ ruby:
             a.addthis_button_tweet
             a.addthis_counter.addthis_pill_style
           script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f711fa532bc34ad"
+
+- if successfully_ordered || params[:force_tracking]
+  = render 'shared/sales_conversion_pixels', locals: { order: @order }
