--- a/app/views/spree/shared/_google_analytics.html.erb
+++ b/app/views/spree/shared/_google_analytics.html.erb
@@ -81,8 +81,8 @@
    }
   })();
   window._fbq = window._fbq || [];
-  window._fbq.push(['track', '6021815151134', {value: #{@spree_order.display_item_total}, currency: '#{current_site_version.currency}' }]);
-  window._fbq.push(['track', '6016695263696', {value: #{@spree_order.display_item_total}, currency: '#{current_site_version.currency}' }]);
+  window._fbq.push(['track', '6021815151134', {value: '0.01', currency: '#{current_site_version.currency}' }]);
+  window._fbq.push(['track', '6016695263696', {value: '0.01', currency: '#{current_site_version.currency}' }]);
 
   </script>
   <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6021815151134&amp;cd[value]=0.00&amp;cd[currency]=AUD&amp;noscript=1" /></noscript>
