--- a/app/views/widgets/site_navigations/main_nav.html.slim
+++ b/app/views/widgets/site_navigations/main_nav.html.slim
@@ -26,41 +26,8 @@ doctype html
               = link_to dresses_path(site_version: current_site_version.code), class: 'menu-item--link active-hover' do
                 | Shop
             li.shop.menu-item
-              a.menu-item--link.active-hover href="#"
+              = link_to here_comes_the_sun_collection_path, class: "menu-item--link active-hover" do
                 | Lookbook
-              .mega-menu.hidden-sm.story-list
-                .stories.container-fluid.center
-
-                  .col-md-2
-                    = link_to here_comes_the_sun_collection_path do
-                      .image-container
-                         = image_tag src='edits/here-comes-the-sun/nav.jpg', :class => 'img-responsive', :alt => 'Here Comes the Sun'
-                      p.text-center.edit-title Here Comes The Sun
-
-                  .col-md-2
-                    = link_to bridesmaid_collection_path do
-                      .image-container.bridesmaids
-                        = image_tag src='edits/bridesmaids/nav.jpg', :class => 'img-responsive', :alt => 'Our Beautiful Bridesmaids Collection'
-                      p.text-center.edit-title Besties and Bridesmaids Collection
-
-                  .col-md-2
-                    = link_to all_size_collection_path do
-                      .image-container
-                        = image_tag src='edits/all-size/nav.jpg', :class => 'img-responsive', :alt => 'All Sizes'
-                      p.text-center.edit-title I'll Have What She's Having
-
-                  .col-md-2
-                    = link_to prom_collection_path do
-                      .image-container.real-prom
-                        = image_tag src='edits/real_prom/1-edits-nav.jpg', :class => 'img-responsive', :alt => 'Our Official Prom Collection'
-                      p.text-center.edit-title Our Official Prom Collection
-
-                  .col-md-2
-                    = link_to break_hearts_collection_path do
-                      .image-container
-                        = image_tag src='edits/BREAK-HEARTS/1_141119_F&P_NYE-edits-nav.jpg', :class => 'img-responsive', :alt => 'Break Hearts not Bank Accounts'
-                      p.text-center.edit-title Break Hearts not Bank Accounts
-
             li.menu-item
               = link_to 'Blog', 'http://fameandpartners.tumblr.com/', class: 'menu-item--link'
 
@@ -82,20 +49,9 @@ doctype html
             li.menu-item
               a.menu-item--link.search href="#"
                 = image_tag "_icons/search.svg", class: "nav-mobile-logo"
-              .search-bar.invis
-                a.close-search href="#"
-                  = image_tag "close.svg", alt: 'Close'
-                .container-fluid.search-form
-                  .col-md-6.col-md-offset-3
-                    .col-md-10
-                      .input-group.margin-bottom-sm
-                        = form_tag search_path, method: :get do
-                          input.form-control id='input-search' name='q' placeholder=("Search here...") type="text"
-                          span
-                            button.invis-fix Enter
 
             li#cart-trigger.menu-item
-              = link_to spree.checkout_path, class: 'menu-item--link' do
+              = link_to root_path(open_cart: true), class: 'menu-item--link' do
                 span.visible-sm.visible-xs.visible-xxs = image_tag "_icons/shopping-bag.svg", class: 'nav-mobile-logo', alt: 'Cart'
-                span.hidden-sm.hidden-xs.hidden-xxs cart:
-                span#cart-item-count 0
+                span.hidden-sm.hidden-xs.hidden-xxs cart
+
