--- a/app/views/widgets/site_navigations/main_nav.html.slim
+++ b/app/views/widgets/site_navigations/main_nav.html.slim
@@ -1,11 +1,18 @@
 doctype html
 = conditional_html do
   head
-    link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/css/select2.min.css"
 
-    = stylesheet_link_tag '//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700'
-    = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'
-    = stylesheet_link_tag 'application_redesign'
+
+    - if !Rails.env.production?
+      meta name="robots" content="noindex, nofollow"
+      script src="//use.typekit.net/kur6crm.js" type="text/javascript"
+    - else
+      script src="//use.typekit.net/day0prb.js" type="text/javascript"
+
+    script type="text/javascript"
+      | try{Typekit.load();}catch(e){}
+
+    = stylesheet_link_tag 'widgets/site_navigations'
     = javascript_include_tag 'application_redesign'
     = csrf_meta_tags
 
