--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -91,12 +91,13 @@ ruby:
                     span.title 
                       span Get it
                       br
-                      span first.
+                      span quick.
                     span.p 
-                      ' Dresses delivered 
+                      small
+                        ' Dresses made for you 
                       br
-                      ' in 2-5 business days
-                    span.btn.btn-sm.btn-block Shop now
+                      ' in 48 hours
+                    span.btn.btn-xs.btn-block Shop now
                 .container-fluid.max-width-100
                   .row
                     .col-md-3.col-lg-2.col-md-offset-4
