extracted questions to templates

--- a/style_quiz/app/views/layouts/style_quiz/application.html.slim
+++ b/style_quiz/app/views/layouts/style_quiz/application.html.slim
@@ -6,9 +6,7 @@ doctype html
     = csrf_meta_tags
     
     = javascript_include_tag 'style_quiz/application'
-    script src="//use.typekit.net/kur6crm.js" type="text/javascript"
-    script type="text/javascript"
-      | try{Typekit.load();}catch(e){}
       
   body
     = yield
+    = render 'layouts/style_quiz/javascript'
