--- a/app/assets/stylesheets/widgets/site_navigations.css.scss
+++ b/app/assets/stylesheets/widgets/site_navigations.css.scss
@@ -16,3 +16,18 @@
 .mobile-logo {
   margin-top: -3px;
 }
+
+.search-input {
+  position: relative;
+  .close-search-btn {
+    position: absolute;
+    top: 5px;
+    right: 0;
+    cursor: pointer;
+  }
+}
+
+.form-control {
+  padding: 10px 16px;
+  font-size: 14px;
+}
