--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -1,7 +1,7 @@
 ruby:
   init_items_counter_sync = "
     (function(){
-      var updateShoppingBagCounter = function() { 
+      var updateShoppingBagCounter = function() {
         $('#cart-item-count').html(window.app.shopping_cart.data.item_count);
       };
       window.app.shopping_cart.on('change', updateShoppingBagCounter);
@@ -87,17 +87,7 @@ ruby:
                         | Fit Guarantee
               .mega-menu--secondary
                 a.mega-menu-banner href="/getitfirst"
-                  .mega-menu-banner-container
-                    span.title 
-                      span Get it
-                      br
-                      span quick.
-                    span.p 
-                      small
-                        ' Dresses made for you 
-                      br
-                      ' in 48 hours
-                    span.btn.btn-xs.btn-block Shop now
+                  = image_tag 'mega-menu/express-making.jpg', alt: 'Get it Quick - Dress made for you in 48 hours'
                 .container-fluid.max-width-100
                   .row
                     .col-md-3.col-lg-2.col-md-offset-4
