[copy] Change title of express making option

--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -110,7 +110,7 @@ ruby:
     - if @product.making_options.present?
       .row
         a#product-making-options-action.btn-customize
-          | Production time
+          | Express Making
 
     .row
       button.btn.btn-block.btn-black.buy-button Add to Cart
