--- a/app/views/spree/admin/orders/_line_items_table.html.slim
+++ b/app/views/spree/admin/orders/_line_items_table.html.slim
@@ -19,7 +19,6 @@ table.line_items
       th Customer Notes
       th Make State
       th Shipping
-      th Actions
   - orders.each do |raw_order|
     - order = Orders::OrderPresenter.new(raw_order)
     tbody
@@ -54,4 +53,16 @@ table.line_items
               = Fabrication::STATES[line_item.fabrication.state]
             - else
               = render partial: 'update_fabrication_state_form', locals: { order_line_item: line_item }
-          = render partial: 'squished_shipment_tracking_form', locals: { line_item: line_item, position: position, total_items_in_order: total_items }
+          - if shipment = line_item.shipment
+            - if shipment.shipped?
+              td
+                = render partial: 'admin/shipments/shipped_shipment_tracking', locals: { shipment: shipment }
+            - elsif total_items == 1
+              td
+                = render partial: 'admin/shipments/tracking_number_update_form', locals: { shipment: shipment }
+            - elsif total_items > 1 && position.zero?
+              td rowspan=total_items
+                = link_to 'Multiple Items In Order', admin_order_shipments_path(shipment.order), target: '_blank'
+          - else
+            td
+              ' No Shipment defined
