--- a/app/views/layouts/redesign/_head.html.slim
+++ b/app/views/layouts/redesign/_head.html.slim
@@ -3,6 +3,8 @@ meta name="description" content=(get_meta_description)
 meta charset="utf-8"
 meta name="viewport" content="width=device-width"
 
+= render '/layouts/redesign/favicon'
+
 link rel="canonical" href=get_canonical_href
 
 link rel="alternate" hreflang="en-US" href=get_hreflang(:us)
